@@ -1,2 +1,7 @@
 # BitTorrent
 Implementation of BitTorrent protocol with clients and trackers
+
+## Configure to Run
+* Follow these steps: https://www.jetbrains.com/help/idea/javafx.html
+* Remember for newer than Java 11 about VM Options: --module-path \JAVAFX_SDK\lib --add-modules javafx.controls,javafx.fxml 
+
